...
    <string name="weekly_summary_current_streak">racha actual</string>
    <string name="weekly_summary_current_weight">Peso actual</string>
    <string name="weekly_summary_body_weight">PESO CORPORAL</string>

    <!-- Profile -->
    <string name="profile_title">Yo</string>
    <string name="profile_logout_title">Cerrar sesión</string>
    <string name="profile_logout_message">¿Seguro que quieres cerrar sesión?</string>
    <string name="profile_streak_stat">Racha</string>
    <string name="profile_achievements_stat">Logros</string>
    <string name="profile_records_stat">Récords</string>
    <string name="profile_section_account">Mi cuenta</string>
    <string name="profile_edit">Editar perfil</string>
    <string name="profile_section_progress">Progreso</string>
...
